Few fixes, accordian changed, controls spacing added to CSS

--- a/GLFX/GLFX.css
+++ b/GLFX/GLFX.css
@@ -1,6 +1,5 @@
 
-.videoWindow {
-    width: 500px;
-    height: 375px;
-    background-color: #666;
+.widgetControls > *
+{
+	padding: 5px;
 }
